# iphoto-downloader

./: .env.example  .gitignore  2FA_IMPLEMENTATION_SUMMARY.md  2FA_SESSION_ANALYSIS.md  AGENTS.md  LICENSE  README.md  SPEC.md  TESTS_IMPLEMENTATION_COMPLETE.md  TODO.md  USER-GUIDE.md  VERSION_INFO.txt  build_linux.sh  build_windows.ps1  iphoto_downloader.spec  iphoto_downloader_credentials.spec  manage_credentials.py  pyproject.toml  ruff.toml  test_2fa_flow.py  test_album_filtering_functionality.py  test_album_functionality.py  test_auth.py  test_ip.py  test_pushover.py  test_results.txt  test_success_page.py  validate_workflow.py  version_manager.py
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 2fa_issue.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  nightly.yml  quality.yml  release.yml
docs/: BUILD.md  BUILD_IMPLEMENTATION_SUMMARY.md  CI_CD_IMPLEMENTATION.md  CI_ENV_SETUP.md  CREDENTIAL_MANAGER_GUIDE.md  DELIVERY_ARTIFACTS_RESOURCES.md  E2E_TESTING_GUIDE.md  PUSHOVER_SETUP.md  SPEC.md  TODO.md  USER-GUIDE.md  VERSIONING.md  WINDOWS_DEFENDER_GUIDE.md
hooks/: hook-fido2.py  hook-pyicloud.py
shared/auth2fa/: README.md  auth2fa.pyi  example_usage.py  pyproject.toml
shared/auth2fa/src/auth2fa/: __init__.py  authenticator.py  pushover_service.py  web_server.py
shared/auth2fa/tests/: __init__.py
shared/auth2fa/tests/integration/: test_auth2fa_cloud.py  test_auth2fa_e2e.py  test_auth2fa_e2e_final.py  test_auth2fa_fix.py  test_import_check.py
shared/auth2fa/tests/unit/: __init__.py  test_two_factor_handler.py  test_web_server.py
src/icloud_photo_sync/: LICENSE  README.md  config.py  deletion_tracker.py  icloud_client.py  logger.py  main.py  pushover_service.py  pyproject.toml  sync.py  web_server.py
src/icloud_photo_sync/auth/: __init__.py  pushover_service.py  two_factor_handler.py  web_server.py
src/icloud_photo_sync/src/icloud_photo_sync/: __init__.py  config.py  continuous_runner.py  deletion_tracker.py  delivery_artifacts.py  errors.py  icloud_client.py  instance_manager.py  logger.py  main.py  manage_credentials.py  sync.py
src/icloud_photo_sync/tests/: __init__.py
src/icloud_photo_sync/tests/unit/: __init__.py  test_config.py  test_deletion_tracker.py  test_icloud_client.py
src/iphoto_downloader/: README.md  pyproject.toml
src/iphoto_downloader/src/icloud_photo_sync/: __init__.py  config.py  continuous_runner.py  icloud_client.py  instance_manager.py  logger.py  main.py  manage_credentials.py  sync.py
src/iphoto_downloader/src/iphoto_downloader/: config.py  continuous_runner.py  deletion_tracker.py  delivery_artifacts.py  errors.py  icloud_client.py  instance_manager.py  logger.py  main.py  manage_credentials.py  sync.py  version.py
tests/: TEST_EXECUTION_GUIDE.md  __init__.py  common_test_utils.py  conftest.py  run_all_tests.py  run_e2e_tests.py  run_tests.py  test_automation_utils.py
tests/integration/: __init__.py  test.py  test_e2e_sync.py  test_icloud_integration.py  test_manual_automated.py  test_multi_instance_integration.py  test_sync_integration.py  test_web_server_automated.py
tests/manuel/: README.md  run_two_factor_handler_tests.py  run_web_server_tests.py  test_2fa_flow.py  test_2fa_implementation.py  test_album_filtering_functionality.py  test_album_functionality.py  test_auth.py  test_auth_pure.py  test_basic_sync_pause.py  test_build.py  test_config.py  test_continuous_demo.py  test_continuous_mode.py  test_credentials.py  test_database_safety_integration.py  test_database_safety_verification.py  test_deletion_simple.py  test_deletion_tracking.py  test_enhanced_tracking.py  test_error_handling.py  test_improved_success.py  test_manual_db_config.py  test_manual_db_config_automated.py  test_multi_instance_manual.py  test_pushover.py  test_success_page.py  test_sync_pause.py  test_two_factor_handler_manual.py  test_web_server_manual.py
tests/unit/: __init__.py  test_2fa_system.py  test_album_filtering.py  test_config.py  test_database_path_config.py  test_database_safety.py  test_deletion_tracker.py  test_delivery_artifacts.py  test_delivery_artifacts_fixed.py  test_enhanced_deletion_tracker.py  test_enhanced_tracking.py  test_icloud_client.py  test_implementation_summary.py  test_instance_manager.py  test_pushover_service.py  test_sync.py  test_sync_delay.py  test_two_factor_handler.py  test_versioning.py  test_web_server.py
