[tool.uv.workspace]
members = [
  "shared/*", 
  "src/*"
]

[project]
name = "icloud-photo-sync-workspace"
version = "0.1.0"
description = "A monorepo workspace for iCloud photo sync tools"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
keywords = ["icloud", "photos", "sync", "backup", "workspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "uv",
    "icloud-photo-sync",
    "auth2fa",
]

[tool.uv.sources]
icloud-photo-sync = { workspace = true }
auth2fa = { workspace = true }

[project.urls]
Homepage = "https://github.com/your-username/icloud-photo-sync"
Repository = "https://github.com/your-username/icloud-photo-sync"
Issues = "https://github.com/your-username/icloud-photo-sync/issues"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.2",
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "shared/*/tests", "src/*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov=shared",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests requiring real iCloud credentials",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
