[project]
name = "icloud-photo-sync"
version = "0.1.0"
description = "A tool to sync photos from iCloud to local storage with deletion tracking"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
keywords = ["icloud", "photos", "sync", "backup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyicloud>=2.0.1",
    "python-dotenv>=1.1.1",
    "keyring>=24.0.0",
    "requests>=2.31.0",
    "auth2fa",
]

[project.scripts]
icloud-photo-sync = "iphoto_downloader.main:main"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.2",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
iphoto_downloader = { path = "." }
auth2fa = { workspace = true }
